<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021  Drone3D-Team
  ~ The license can be found in LICENSE at root of the repository
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityStyle"
    tools:context=".ui.drone.DroneConnectActivity">

    <Button
        android:id="@+id/connect_simulation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="connectSimulatedDrone"
        android:text="@string/simulation_connect_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_port"
        app:layout_constraintVertical_bias="0.014" />

    <EditText
        android:id="@+id/text_IP_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="0.0.0.0"
        android:ems="10"
        android:hint="@string/drone_connect_ip_default"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <EditText
        android:id="@+id/text_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/drone_connect_port_default"
        android:inputType="number"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_IP_address"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/connect_drone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="connectDrone"
        android:text="@string/drone_connect_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"
        tools:layout_editor_absoluteX="0dp" />

    <ProgressBar
        android:id="@+id/progress_bar_drone"
        style="?android:attr/progressBarStyle"
        android:layout_width="98dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <TextView
        android:id="@+id/waiting_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_connection"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

</androidx.constraintlayout.widget.ConstraintLayout>