<!--
  ~ Copyright (C) 2021  Drone3D-Team
  ~ The license can be found in LICENSE at root of the repository
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Drone3D</string>

    <!-- Main Menu Activity -->
    <string name="log_in">Log in</string>
    <string name="log_out">Logout</string>
    <string name="connect_a_drone">Connect a drone</string>
    <string name="manage_offline_map">Manage offline map</string>
    <string name="disconnect_drone">Disconnect drone</string>
    <string name="create_a_new_itinerary">Create a new itinerary</string>
    <string name="browse_itineraries">Browse itineraries</string>
    <string name="browse_itineraries_image_descriptor">location</string>
    <string name="create_itinerary_image_descriptor">parallelogram with 3 points</string>
    <string name="disconnect_drone_image_descriptor">drone</string>
    <string name="connect_drone_image_descriptor">drone</string>
    <string name="manage_offline_map_image_descriptor">no connection</string>
    <string name="logo_image_descriptor">logo</string>

    manage_offline_map
    go_disconnect_drone_button
    <!-- Login/Register Activities -->
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="pseudo_text">Pseudo</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Create account</string>
    <string name="login_success">Login succeed</string>
    <string name="login_fail">Login failed</string>
    <string name="register_success">Registration successful</string>
    <string name="register_fail">Registration failed</string>
    <string name="register_info_default">Enter your register information</string>
    <string name="login_info_default">Enter your login information</string>
    <string name="email_or_password_empty">The email address and the password can\'t be empty</string>

    <!-- Connect/Disconnect Drone/Simulation Activities -->
    <string name="drone_connect_button">Connect a drone</string>
    <string name="simulation_connect_button">Connect a simulation</string>
    <string name="is_connected_drone">There is a connected drone</string>
    <string name="drone_connect_ip_default">IP address</string>
    <string name="drone_connect_port_default">Port</string>
    <string name="drone_disconnect_button">Disconnect</string>
    <string name="drone_simulated_ip">IP : %1$s</string>
    <string name="drone_simulated_port">Port : %1$s</string>
    <string name="waiting_connection">Waiting for connection</string>
    <!-- Message showed when ip with invalid format is written -->
    <string name="ip_format_invalid">The IP address need to have a valid format</string>
    <!-- Message showed when application can't connect to provided ip -->
    <string name="ip_connection_timeout">An error occurred when trying to connect to the provided IP : timeout</string>
    <!-- Message showed when application couldn't detect a drone -->
    <string name="no_drone_detected">No drone was detected</string>

    <!-- Itinerary Save Activity -->
    <string name="name_mission_text">Mission name</string>
    <string name="save_mission_text">Continue</string>
    <string name="mission_saved">Mission saved</string>
    <string name="error_mission_saved">Error while saving mission</string>
    <string name="private_repo">Private</string>
    <string name="warning_no_box_selected">"You haven't checked any of the options, if you continue your mission will not be saved for the next time"</string>
    <string name="continue_without_saving">Continue without saving</string>
    <string name="cancel">Cancel</string>


    <string name="share_repo">Share</string>

    <!-- Itinerary Create Activity -->
    <string name="content_descriptor_save_icon">save_icon</string>
    <string name="content_descriptor_view_mission_icon">view_mission_icon</string>
    <string name="content_descriptor_delete_mission_icon">delete_mission_icon</string>
    <string name="content_descriptor_build_mission_icon">build_mission_icon</string>
    <string name="content_descriptor_change_strategy_icon">change_strategy_icon</string>
    <string name="map_ready">MAP READY</string>
    <string name="map_not_ready">MAP NOT READY</string>
    <string name="confirm_save_without_updating">Save anyway</string>
    <string name="cancel_save_without_updating">Cancel</string>
    <string name="save_without_updating_confirmation">You have updated the mission settings since the last flight path preview. Do you want to save the mission without having seen the updated preview ?</string>
    <string name="altitude_text">"Altitude: %1$.0f m"</string>
    <string name="area_size_to_big">"The selected area is too large. Please create a smaller one."</string>
    <string name="warning_not_login">"Your are not login, you won't be able to save or share your mission."</string>
    <string name="no_saving_possible">"Continue anyway"</string>
    <string name="go_to_login">"Login"</string>

    <!--Manage offline map activity-->
    <string name="tile_count">Tile count:</string>
    <string name="content_descriptor_delete_icon">delete icon</string>
    <string name="delete_successful">Delete successful</string>
    <string name="delete_fail">Failed to delete</string>
    <string name="download_succeeded">The download of: %1$s has succeeded</string>
    <string name="download_progress">The download is at: %1$s completion</string>
    <string name="tile_limit_exceeded">Download paused, the tile limit has been exceeded</string>
    <string name="name_hint">Name</string>
    <string name="download">Download</string>
    <string name="empty">Name should not be empty</string>


    <!-- Mapping Mission Selection Activity -->
    <string name="create_mapping_mission_button_text">Create new mapping mission</string>
    <string name="private_type_text">Private</string>
    <string name="shared_type_text">Shared</string>

    <!-- Itinerary Show Activity -->
    <string name="delete_mission">Delete</string>
    <string name="confirm_delete">Delete</string>
    <string name="cancel_delete">Cancel</string>
    <string name="weather_info">Weather Details</string>
    <string name="delete_confirmation">Are you sure you want to delete this mission ?</string>
    <string name="launch_mission_confirmation">Alert bad weather ! Are you sure you want to launch the mission in these weather conditions ? The drone risks to break.</string>
    <string name="confirm_launch">Launch at my own risk</string>
    <string name="cancel_launch">Cancel</string>
    <string name="content_descriptor_drone_icon">drone_icon</string>
    <string name="launch_no_drone">A drone should be connected to launch the mission.</string>
    <string name="launch_no_drone_pos">Failed to get the drone location.</string>
    <string name="drone_too_far_from_start">The drone is too far from the starting point of the mission.</string>
    <string name="content_descriptor_edit_icon">edit_icon</string>

    <!-- Mission In Progress Activity -->
    <string name="mission_invalid">Some of the provided mission arguments are null</string>
    <string name="back_to_home_button">Back to Home</string>
    <string name="back_to_user_button">Back to User</string>
    <string name="mission_already_in_progress">A mission is already in progress. Wait for it to end or cancel it before starting a new one.</string>
    <string name="drone_mission_return_launch">Mission done, returning to launch point</string>
    <string name="drone_mission_to_user">The drone is coming back to your current location.</string>
    <string name="drone_already_armed">Drone already armed</string>
    <string name="drone_disarmed_during_setup">Drone disarmed by an external source. Please retry…</string>
    <!-- Live values during the flight -->
    <string name="live_speed">Speed : %1$.2f m/s</string>
    <string name="live_altitude">Altitude : %1$.2f m</string>
    <string name="live_battery">Battery : %1$.2f%%</string>
    <string name="live_distance_user">Distance to user : %1$.2f m</string>
    <string name="user_location_deactivated">Distance to user : Not allowed to access user\'s location</string>
    <string name="user_location_null">Distance to user : Error, user\'s location is null</string>
    <string name="live_status">Mission status : %1$s</string>
    <!-- Message showed in case of a loss of connection with the drone during a mission -->
    <string name="lost_connection_message">Lost Connection With the Drone</string>
    <!--  Message showed when the drone is too far from the user -->
    <string name="drone_too_far">The drone is too far from you. Mission paused until you go closer from it.</string>
    <!-- Message showed when the drone is again close enough from the user -->
    <string name="drone_close_again">The drone is close enough again. Mission resumed.</string>

    <!-- Mission Start Activity -->
    <string name="mission_state_idle">Establishing connection with the drone</string>
    <string name="mission_state_arming">Arming the drone</string>
    <string name="mission_state_sending">Sending the mission to the drone</string>
    <string name="mission_state_starting">The mission is starting</string>
    <string name="mission_state_executing">The mission is being executed</string>
    <string name="mission_state_unknown">The drone is in an unknown state. Are you the only one controlling it ?</string>

    <!-- Weather Info Activity -->
    <string name="info_temperature">Temperature : %1$s\u2103</string>
    <string name="info_humidity">Humidity : %1$s%%</string>
    <string name="info_wind_speed">Wind speed : %1$s m/s</string>
    <string name="info_visibility">Visibility limit : %1$s m</string>
    <string name="info_visibility_km">Visibility limit : %1$s km</string>
    <!-- Shown when checking the weather for a non-existent mission -->
    <string name="non_existent_mission">The mission is null, can\'t show weather</string>
    <!-- Content descriptors -->
    <string name="weather_image_descriptor">weather</string>
    <string name="thermometer_image_descriptor">thermometer</string>
    <string name="humidity_image_descriptor">water drops</string>
    <string name="wind_image_descriptor">wind</string>
    <string name="visibility_image_descriptor">eye</string>


    <!-- Mission Pictures Activity -->
    <string name="drone_mission_picture_desc">Drone mission picture</string>

    <!-- Utilities -->
    <string name="mapbox_access_token" tools:ignore="Typos">pk.eyJ1IjoiZDNkIiwiYSI6ImNrbTRrc244djA1bGkydXRwbGphajZkbHAifQ.T_Ygz9WvhOHjPiOpZEJ8Zw</string>

    <!-- Drone -->
    <string name="drone_mission_success">The mission was successfully dispatched to the drone</string>
    <string name="drone_setup_mission_error">An error occurred while dispatching mission to the drone : %s</string>
    <string name="drone_mission_error">An error occurred during the mission : %s</string>
    <string name="drone_pause_success">Mission paused</string>
    <string name="drone_return_error">Could not launch mission to let the drone come back</string>

    <!-- Permission dialog -->
    <string name="permission_accept_button">Accept</string>
    <string name="permission_deny_button">Deny</string>
    <string name="permission_location_enable">Enable location</string>
    <string name="permission_location_rationale">In order to offer you the best possible experience, this app requires your location. Disabling it will result in some features not being available.</string>
    <string name="error">An error occurred : $1%s</string>
    <string name="copy_pictures_links">Copy pictures links</string>
    <string name="pictures_copied">Photos links copied</string>
</resources>